security-demo-and-mtls/resources/peer-authentication-mtls.yaml
kind: PeerAuthentication
apiVersion: security.istio.io/v1beta1
metadata:
  name: strict-policy
  namespace: demo
  labels:
    demoMeshResource: "true"
    policyResource: "true"
#selector:
#  matchLabels:
#    app: demo-app
spec:
  mtls:
    mode: DISABLE
