security-demo-and-mtls/resources/rest-client-pod-sidecar-custom-sa.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    sidecar.istio.io/inject: 'true'
    proxy.istio.io/config: '{"gatewayTopology" :{"forwardClientCertDetails":"ALWAYS_FORWARD_ONLY"}}'
  labels:
    run: rest-api-client
  name: rest-api-client
spec:
  serviceAccountName: demo-app-sa
  containers:
  - command: ["bash", "-c" , "sleep infinity"]
    image: ubi8/ubi:8.5-226
    name: rest-api-client
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
