security-demo-and-mtls/resources/authorization-policy-allow-custom-workload-sa.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-custom-workload-sa
  namespace: demo
  labels:
    demoMeshResource: "true"
    policyResource: "true"
spec:
  selector:
    matchLabels:
      app: demo-app
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/demo/sa/demo-app-sa"]
