security-demo-and-mtls/resources/authorization-policy-allow-same-namespace-custom.yaml
kind: AuthorizationPolicy
apiVersion: security.istio.io/v1beta1
metadata:
  name: allow-same-namespace-custom
  namespace: demo
  labels:
    demoMeshResource: "true"
    policyResource: "true"
spec:
  selector:
    matchLabels:
      app: demo-app
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - demo
